# DuckClaw

./: 404.html  MANIFEST.in  README.md  ROADMAP.md  changes.txt  duckclaw.yaml.example  index.html  pyproject.toml  requirements.txt  sitemap.xml
architecture/llm-router/: index.html
architecture/overview/: index.html
architecture/permission-engine/: index.html
docs/: README.md
docs/architecture/: llm-router.md  overview.md  permission-engine.md
docs/features/: 01-screen-capture.md  02-web-browser.md  03-telegram.md  04-discord.md  05-memory.md  06-shell-runner.md  07-file-manager.md  08-scheduler.md  09-prompt-injection.md  10-audit-log.md  11-camera.md  12-llm-router.md  13-dashboard.md  14-cli.md
docs/guides/: cli.md  configuration.md  quickstart.md
duckclaw/: __init__.py  cli.py
duckclaw/agent/: __init__.py  intent_analyzer.py  planner.py  react_engine.py  react_engine_v2.py  react_engine_v3.py  reflection.py  synthesizer.py
duckclaw/bridges/: base.py  discord_bridge.py  telegram_bridge.py
duckclaw/core/: config.py  orchestrator.py
duckclaw/dashboard/: app.py
duckclaw/dashboard/templates/: audit.html  base.html  chat.html  database.html  logs.html  memory.html  settings.html
duckclaw/llm/: router.py
duckclaw/memory/: extractor.py  store.py
duckclaw/permissions/: engine.py
duckclaw/security/: context_isolation.py
duckclaw/skills/: base.py  camera.py  file_manager.py  knowledge_base.py  registry.py  scheduler.py  screen_capture.py  shell_runner.py  web_browser.py  web_search.py
features/01-screen-capture/: index.html
features/02-web-browser/: index.html
features/03-telegram/: index.html
features/04-discord/: index.html
features/05-memory/: index.html
features/06-shell-runner/: index.html
features/07-file-manager/: index.html
features/08-scheduler/: index.html
features/09-prompt-injection/: index.html
features/10-audit-log/: index.html
features/11-camera/: index.html
features/12-llm-router/: index.html
features/13-dashboard/: index.html
features/14-cli/: index.html
guides/cli/: index.html
guides/configuration/: index.html
guides/quickstart/: index.html
scripts/: ingest_skills.py  skill-routing.txt
search/: search_index.json
